--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Main2Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main3Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main4Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main5Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main6Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main7Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main8Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main9Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main10Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Main11Activity" android:label="Detail Kendaraan" android:parentActivityName=".MainActivity"><meta-data android:name="android.support.PARENT_ACTIVITY" android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
